# pigeonGPT

./: .gitignore  README.md  pyproject.toml
pigeongpt/: __main__.py  labeler.py  main.py  utils.py
pigeongpt/provider/: gmail.py  utils.py
tests/: test_labeler.py
